added some tweaks to make the computation of similarities faster: declaring variables outside loops, using virtual threads, changing the way the list of second journals is iterated one. Also, fixed an error where the author ids were not sorted ascendingly in the array of ints.